--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>github.jackutil</groupId>
   <artifactId>engine</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <name>Jack Mapping Engine</name>
