--- a/schema-generator/pom.xml
+++ b/schema-generator/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>github.jackutil</groupId>
         <artifactId>jme</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>schema-generator</artifactId>
