--- a/pom.xml
+++ b/pom.xml
@@ -26,22 +26,28 @@
     <schema-generator.version>1.0.0</schema-generator.version>
   </properties>
 
-  <repositories>
+  <distributionManagement>
     <repository>
-      <id>jitpack.io</id>
-      <url>https://jitpack.io</url>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/jackutil/jme</url>
     </repository>
-  </repositories>
+    <snapshotRepository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/jackutil/jme</url>
+    </snapshotRepository>
+  </distributionManagement>
 
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>com.github.jackutil</groupId>
+        <groupId>github.jackutil</groupId>
         <artifactId>engine</artifactId>
         <version>${engine.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.github.jackutil</groupId>
+        <groupId>github.jackutil</groupId>
         <artifactId>schema-generator</artifactId>
         <version>${schema-generator.version}</version>
       </dependency>
