--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,12 @@
   <distributionManagement>
     <repository>
       <id>github</id>
-      <name>GitHub Packages</name>
+      <name>GitHub jackutil Apache Maven Packages</name>
       <url>https://maven.pkg.github.com/jackutil/jme</url>
     </repository>
     <snapshotRepository>
       <id>github</id>
-      <name>GitHub Packages</name>
+      <name>GitHub GitHub jackutil Apache Maven Packages</name>
       <url>https://maven.pkg.github.com/jackutil/jme</url>
     </snapshotRepository>
   </distributionManagement>
