--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -52,6 +52,7 @@
     <dependency>
       <groupId>com.networknt</groupId>
       <artifactId>json-schema-validator</artifactId>
+      <version>1.5.9</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
